configured the seed to use the same avata and product images for each, after some issues in the code to get that done properly. Also ran a migration to add active storag (active_storage) to the rails app, as this is apprently necessary and doesnt come out of the box. Started setting up the home function in the pages controller, and passing the variable to the product_card_feed partial

--- a/app/assets/stylesheets/components/_product_card_feed.scss
+++ b/app/assets/stylesheets/components/_product_card_feed.scss
@@ -1,4 +1,4 @@
-product-card-feed {
+.product-card-feed {
 
   /* Auto layout */
 
@@ -13,7 +13,7 @@ product-card-feed {
 
   border-bottom: 1px solid $light-gray;
 
-  product-card-header {
+  .product-card-header {
 
     /* Auto layout */
 
@@ -26,13 +26,16 @@ product-card-feed {
 
   /* Inside auto layout */
 
-  flex: none;
-  order: 0;
-  align-self: stretch;
-  flex-grow: 0;
+
+  flex-grow: 1;
 
   }
 
+  .main-product-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 
 
 }
